# Taurscribe

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CODE_REFERENCE.md  DOCS_GUIDE.md  EMBEDDED_MODEL.md  LATEST_UPDATES.md  PERFORMANCE_OPTIMIZATION.md  README.md  TESTING.md  THREADING_VISUAL_GUIDE.md  WHISPER_HALLUCINATIONS.md  WHISPER_SETUP.md  WHISPER_SIMULATION.md  WHISPER_STATUS.md  WHISPER_VERSIONING.md  build_log.txt  index.html  package-lock.json  package.json  update_svgs.js
.github/: CPU_ONLY_BUILD_FIXES.md  MACOS_DEPLOYMENT_TARGET_FIX.md
.github/workflows/: BUILD_STRATEGY.md  build.yml  release.yml
binaries/: README.md
scripts/: build-macos.ts  build-windows.ts  bundle-linux-solibs.sh  bundle-macos-dylibs.sh  bundle-macos-dylibs.ts  copy-dlls.ts  download_librispeech_test_clean.ps1  download_librispeech_test_clean.sh  tauri-wrapper.ts
src/: App.css  App.tsx  OverlayApp.css  OverlayApp.tsx  main.tsx  modelRecommendations.ts
src-tauri/: .gitignore  Cargo.toml  Entitlements.plist  Info.plist  build.rs  build_log.txt  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/.cargo/: config.toml
src-tauri/C:/: ._bld
src-tauri/C:/bld/: .rustc_info.json
src-tauri/C:/bld/debug/: ._build
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/linux-libs/: README.md
src-tauri/src/: audio.rs  audio_decode.rs  audio_preprocess.rs  cohere.rs  cohere_features.rs  context.rs  denoise.rs  granite_features.rs  granite_speech.rs  lib.rs  librispeech_wer.rs  llm.rs  main.rs  memory.rs  ort_session.rs  overlay.rs  parakeet.rs  parakeet_loaders.rs  parakeet_runtime.rs  spellcheck.rs  state.rs  system_audio.rs  types.rs  utils.rs  vad.rs  watcher.rs  whisper.rs
src-tauri/src/commands/: cohere.rs  downloader.rs  file_transcription.rs  granite_speech.rs  history.rs  llm.rs  misc.rs  mod.rs  model_registry.rs  models.rs  recording.rs  settings.rs  spellcheck.rs  transcription.rs
src-tauri/src/hotkeys/: listener.rs  mod.rs
src-tauri/src/tray/: icons.rs  mod.rs
src-tauri/tests/: file_drop_accuracy.rs  jfk_asr_smoke.rs  memory_engine_regression.rs  mic_accuracy.rs
src-tauri/windows-dlls/: README.md
src/components/: FileTranscriptionPanel.tsx  Icons.tsx  QuickSettings.tsx  SessionNoticeCard.tsx  SettingsModal.css  SettingsModal.tsx  SetupWizard.css  SetupWizard.tsx  TitleBar.css  TitleBar.tsx  TranscriptFeed.tsx  TranscriptHistory.tsx
src/components/settings/: AboutTab.tsx  AppTab.tsx  AudioTab.tsx  DictionaryTab.tsx  DownloadsTab.tsx  GeneralTab.tsx  HotkeyTab.tsx  ModelRow.tsx  ModelsTab.tsx  PostProcessingTab.tsx  RecordingTab.tsx  SnippetsTab.tsx  SoundTab.tsx  TextTab.tsx  types.ts
src/constants/: ticker.ts
src/hooks/: useDownloads.ts  useEngineSwitch.ts  useHeaderStatus.ts  useHotkeyListeners.ts  useInitialLoad.ts  useModels.ts  useModelsWatcher.ts  usePersonalization.ts  usePostProcessing.ts  useRecording.ts  useSessionState.ts  useSounds.ts
src/types/: session.ts
src/utils/: commandResult.ts  engineUtils.ts  modelDisplay.ts  useSyncedRef.ts
taurscribe-runtime/: README.md  Test for whisper.m4a
